--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM busybox:latest
 MAINTAINER Sander <mail@sandervanvugt.nl>
 
-CMD ["touch /tmp/FromTheContainer"] 
+CMD ["touch", "/tmp/FromTheContainer"] 
